--- a/client/src/pages/Signin.css
+++ b/client/src/pages/Signin.css
@@ -9,7 +9,7 @@
     min-width: 100%;
     min-height: 100%;
     background-repeat: no-repeat;
-    background-image: url(https://images.unsplash.com/photo-1498496294664-d9372eb521f3?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1000&q=80);
+    background-image: url(../components/pictures/clouds.jpg);
     background-size: cover;
     overflow: hidden;
 }
