--- a/client/src/pages/Signup.css
+++ b/client/src/pages/Signup.css
@@ -9,7 +9,7 @@
     min-width: 100%;
     min-height: 100%;
     background-repeat: no-repeat;
-    background-image: url(https://upload.wikimedia.org/wikipedia/en/thumb/d/d8/After_Dark_Flying_Toasters.png/300px-After_Dark_Flying_Toasters.png);
+    background-image: url(../components/pictures/toasters.jpg);
     background-size: cover;
     overflow: hidden;
 }
